feat: am adaugat o noua pagina de register:)

--- a/src/components/RegistrationModal/RegistrationModal.module.css
+++ b/src/components/RegistrationModal/RegistrationModal.module.css
@@ -15,7 +15,7 @@
 }
 
 .sectionContainer {
-  @apply pt-4;
+  @apply flex bg-[#FBFCFF] flex-col max-w-6xl rounded-3xl shadow-md p-10 m-5;
 }
 
 .sectionTitle {
