--- a/src/components/Buttons/Button.module.css
+++ b/src/components/Buttons/Button.module.css
@@ -51,7 +51,7 @@
 .default[type='button'],
 .default[type='reset'],
 .default[type='submit'] {
-  @apply bg-gray-400 text-white;
+  @apply bg-blue-500 text-white;
 }
 
 .underlined-web,
