feat: register information page

--- a/src/components/Forms/Register/Information/Information.module.css
+++ b/src/components/Forms/Register/Information/Information.module.css
@@ -2,4 +2,6 @@
     @apply bg-blue-100 rounded border-blue-100 justify-center;
 }
 
-
+.data{
+    @apply bg-blue-100 rounded border-blue-100 justify-center w-[227px];
+}
