feat: fix some tests

--- a/src/components/Forms/Register/Information/Information.module.css
+++ b/src/components/Forms/Register/Information/Information.module.css
@@ -3,5 +3,5 @@
 }
 
 .data{
-    @apply bg-blue-100 rounded border-blue-100 justify-center w-[227px];
+    @apply w-full bg-blue-100 rounded border-blue-100 justify-center w-[227px];
 }
